radeon: Reinstate sync in radeon_crtc_show/hide_cursor.

Make sure the DRI lock is held though, as these can be called asynchronously.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=12245 .